--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb+srv://chezcaellar:sFsPF43GBnoFmwwG@alternativelearningsyst.e5kownh.mongodb.net/?retryWrites=true&w=majority&appName=AlternativeLearningSystem"
+GEMINI_API_KEY="AIzaSyB4e9yZSMXa-zlG_FPkL3R-plY-pmYjjEc"
 NEXT_PUBLIC_AUTHKEY="cd8157a0b1a24e65f1314fb2565b82bb3b901106"
 NEXT_PUBLIC_BASE_URL="http://localhost:3001"
