--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@shadcn/ui": "^0.0.4",
     "@types/leaflet": "^1.9.18",
+    "@types/recharts": "^1.8.29",
     "bcrypt-ts": "^7.1.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -35,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-leaflet": "^5.0.0",
+    "recharts": "^3.5.1",
     "tailwind-merge": "^3.3.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.17",
